// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transitionTimingFunction renders 0 1`] = `
Array [
  .c0 {
  -webkit-transition-timing-function: 0;
  transition-timing-function: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-timing-function: 0;
  transition-timing-function: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-timing-function: 0;
  transition-timing-function: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-timing-function: 0;
  transition-timing-function: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`transitionTimingFunction renders function 1`] = `
Array [
  .c0 {
  -webkit-transition-timing-function: hasnot;
  transition-timing-function: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-timing-function: has;
  transition-timing-function: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-timing-function: hasnot;
  transition-timing-function: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-timing-function: has;
  transition-timing-function: has;
}

<div
    className="c0"
  />,
]
`;

exports[`transitionTimingFunction renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-transition-timing-function: invalid.path.1;
  transition-timing-function: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-timing-function: invalid.path.1;
  transition-timing-function: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-timing-function: invalid.path.1;
  transition-timing-function: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-timing-function: invalid.path.1;
  transition-timing-function: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`transitionTimingFunction renders negative number 1`] = `
Array [
  .c0 {
  -webkit-transition-timing-function: -54881;
  transition-timing-function: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-timing-function: -54881;
  transition-timing-function: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-timing-function: -42365;
  transition-timing-function: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-timing-function: -42365;
  transition-timing-function: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`transitionTimingFunction renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-transition-timing-function: July;
    transition-timing-function: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transition-timing-function: August;
    transition-timing-function: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transition-timing-function: September;
    transition-timing-function: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transition-timing-function: November;
    transition-timing-function: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-transition-timing-function: July;
    transition-timing-function: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transition-timing-function: August;
    transition-timing-function: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transition-timing-function: September;
    transition-timing-function: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transition-timing-function: November;
    transition-timing-function: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transition-timing-function: May;
    transition-timing-function: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transition-timing-function: June;
    transition-timing-function: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transition-timing-function: April;
    transition-timing-function: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transition-timing-function: November;
    transition-timing-function: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transition-timing-function: May;
    transition-timing-function: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transition-timing-function: June;
    transition-timing-function: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transition-timing-function: April;
    transition-timing-function: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transition-timing-function: November;
    transition-timing-function: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`transitionTimingFunction renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-transition-timing-function: July;
    transition-timing-function: July;
  }
}

@media April {
  .c0 {
    -webkit-transition-timing-function: August;
    transition-timing-function: August;
  }
}

@media January {
  .c0 {
    -webkit-transition-timing-function: September;
    transition-timing-function: September;
  }
}

@media April {
  .c0 {
    -webkit-transition-timing-function: November;
    transition-timing-function: November;
  }
}

@media June {
  .c0 {
    -webkit-transition-timing-function: August;
    transition-timing-function: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-transition-timing-function: July;
    transition-timing-function: July;
  }
}

@media April {
  .c0 {
    -webkit-transition-timing-function: August;
    transition-timing-function: August;
  }
}

@media January {
  .c0 {
    -webkit-transition-timing-function: September;
    transition-timing-function: September;
  }
}

@media April {
  .c0 {
    -webkit-transition-timing-function: November;
    transition-timing-function: November;
  }
}

@media June {
  .c0 {
    -webkit-transition-timing-function: August;
    transition-timing-function: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transition-timing-function: January;
    transition-timing-function: January;
  }
}

@media April {
  .c0 {
    -webkit-transition-timing-function: December;
    transition-timing-function: December;
  }
}

@media January {
  .c0 {
    -webkit-transition-timing-function: April;
    transition-timing-function: April;
  }
}

@media April {
  .c0 {
    -webkit-transition-timing-function: May;
    transition-timing-function: May;
  }
}

@media June {
  .c0 {
    -webkit-transition-timing-function: June;
    transition-timing-function: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transition-timing-function: January;
    transition-timing-function: January;
  }
}

@media April {
  .c0 {
    -webkit-transition-timing-function: December;
    transition-timing-function: December;
  }
}

@media January {
  .c0 {
    -webkit-transition-timing-function: April;
    transition-timing-function: April;
  }
}

@media April {
  .c0 {
    -webkit-transition-timing-function: May;
    transition-timing-function: May;
  }
}

@media June {
  .c0 {
    -webkit-transition-timing-function: June;
    transition-timing-function: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`transitionTimingFunction renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-transition-timing-function: 54881;
  transition-timing-function: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-timing-function: 54881;
  transition-timing-function: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-timing-function: 42365;
  transition-timing-function: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-timing-function: 42365;
  transition-timing-function: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`transitionTimingFunction renders string 1`] = `
Array [
  .c0 {
  -webkit-transition-timing-function: July;
  transition-timing-function: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-timing-function: July;
  transition-timing-function: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-timing-function: June;
  transition-timing-function: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-timing-function: June;
  transition-timing-function: June;
}

<div
    className="c0"
  />,
]
`;

exports[`transitionTimingFunction renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-transition-timing-function: DarkSlateBlue;
  transition-timing-function: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-timing-function: DarkSlateBlue;
  transition-timing-function: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-timing-function: DarkSlateBlue;
  transition-timing-function: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-timing-function: DarkSlateBlue;
  transition-timing-function: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
